--- a/cafecofe.css
+++ b/cafecofe.css
@@ -19,7 +19,7 @@ body{
     color: red;
 }
 .image-1{
-    background-image: url('./images/img1.gif');
+    background-image: url('img1.gif');
     background-repeat: no-repeat;
     background-size: cover;
    text-align: center;
@@ -33,14 +33,14 @@ body{
     margin-top: 420px;
 }
 .image-2{
-    background-image: url('./images/img2.gif');
+    background-image: url('img2.gif');
     background-repeat: no-repeat;
     background-size: cover;
    text-align: center;
   
 }
 .image-3{
-    background-image: url('./images/img3.gif');
+    background-image: url('img3.gif');
     background-repeat: no-repeat;
     background-size: cover;
    text-align: center;
